# cpp-kata-1

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/util/: CmakeLists.txt  hello_world.cpp  hello_world.h  hello_world.test.cpp
